detail run configuration

--- a/share/voxel-0.6.7/conf/DepthEyeH1CDKCamera.conf
+++ b/share/voxel-0.6.7/conf/DepthEyeH1CDKCamera.conf
@@ -1,6 +1,6 @@
 [core]
 dml = OPT8320.dml
-camera_profiles = HaloH1CDKCameraLensOnly.conf, HaloH1CDKCameraNormal.conf
+camera_profiles = DepthEyeH1CDKCameraLensOnly.conf, DepthEyeH1CDKCameraNormal.conf
 default_profile = 129
 
 [observed_params]
